--- a/tti2sdk/src/main/res/layout/activity_avatar.xml
+++ b/tti2sdk/src/main/res/layout/activity_avatar.xml
@@ -103,6 +103,46 @@
         app:layout_constraintStart_toStartOf="@+id/loadingBox"
         app:layout_constraintTop_toBottomOf="@+id/containerTopButtons" />
 
+    <LinearLayout
+        android:id="@+id/containerFragments"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/background_gray"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/containerTabs"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btnRandomize">
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/viewPager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/containerTabs"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/tti_toolbar_height"
+        android:background="@color/background_gray"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" >
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tabIndicatorHeight="0dp"  />
+
+    </LinearLayout>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bckAvatar"
         android:layout_width="match_parent"
@@ -189,45 +229,5 @@
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <LinearLayout
-        android:id="@+id/containerFragments"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@color/background_gray"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/containerTabs"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bckAvatar">
-
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/viewPager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/containerTabs"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/tti_toolbar_height"
-        android:background="@color/background_gray"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent" >
-
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tabLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:tabIndicatorHeight="0dp"  />
-
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
