--- a/tti2sdk/src/main/res/layout/dialog_share_avatar.xml
+++ b/tti2sdk/src/main/res/layout/dialog_share_avatar.xml
@@ -28,7 +28,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="190dp"
         android:layout_marginEnd="25dp"
         android:fontFamily="@font/poppins_regular"
         android:text="@string/share_with_your_friends_how_you_travel_in_style_throughout_indonesia"
@@ -37,38 +37,26 @@
         android:textSize="@dimen/fourteen_sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/loadingBox"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="#34000000"
-        android:clickable="false"
-        android:elevation="10dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible">
-
-        <include
-            android:id="@+id/progressBar"
-            layout="@layout/loading_default"
-            android:layout_width="68dp"
-            android:layout_height="68dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintTop_toBottomOf="@+id/dialogTitle2" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageViewShare"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:src="@drawable/icon_dialog_avatar"
+        android:layout_height="0dp"
+        android:src="@null"
+        app:layout_constraintBottom_toTopOf="@+id/dialogTitle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dialogTitle2" />
+
+    <ProgressBar
+        android:id="@+id/progressShare"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_centerInParent="true"
+        android:indeterminate="true"
+        android:indeterminateTint="@color/blue_progress"
+        app:layout_constraintBottom_toTopOf="@+id/dialogTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dialogTitle2" />
@@ -130,7 +118,7 @@
         android:layout_width="15dp"
         android:layout_height="15dp"
         android:layout_marginTop="10dp"
-        app:layout_constraintEnd_toEndOf="@+id/loadingBox"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/containerButtomKeepChanges" />
 
