--- a/tti2sdk/src/main/res/layout/fragment_home.xml
+++ b/tti2sdk/src/main/res/layout/fragment_home.xml
@@ -13,25 +13,34 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <app.rive.runtime.kotlin.RiveAnimationView
-        android:id="@+id/map"
+    
+    <HorizontalScrollView
         android:layout_width="match_parent"
-        android:layout_height="260dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/topHome"
-        app:riveFit="FILL" />
-
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="HomeFragment"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/mapContainer"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/topHome"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <app.rive.runtime.kotlin.RiveAnimationView
+                android:id="@+id/map"
+                android:layout_width="match_parent"
+                android:layout_height="260dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:riveFit="FILL" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </HorizontalScrollView>
+
 
     <ImageView
         android:id="@+id/iconTeam"
