--- a/tti2sdk/src/main/res/layout/activity_home.xml
+++ b/tti2sdk/src/main/res/layout/activity_home.xml
@@ -58,8 +58,8 @@
 
             <app.rive.runtime.kotlin.RiveAnimationView
                 android:id="@+id/map"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="3580dp"
+                android:layout_height="1976dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
