--- a/tti2sdk/src/main/res/layout/activity_leaderboard.xml
+++ b/tti2sdk/src/main/res/layout/activity_leaderboard.xml
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/telkomsel_batik_sans_bold"
-            android:text="@string/txt_team_label"
+            android:text="@string/txt_leaderboard_label"
             android:textColor="@color/blue_dark"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="@id/btnBackTeam"
@@ -44,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/txt_team"
-        android:text="Team"
+        android:text="@string/txt_leaderboard_label"
         android:textSize="40sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
