--- a/tti2sdk/src/main/res/layout/activity_home.xml
+++ b/tti2sdk/src/main/res/layout/activity_home.xml
@@ -5,15 +5,59 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/thirty_white"
     tools:context=".ui.home.HomeActivity">
 
-    <com.timwe.tti2sdk.ui.generic.TtiToolbar
-        android:id="@+id/tti_toolbar"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/containerMainToolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="?android:attr/actionBarSize"
+        android:background="@color/all_white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/btnCloseSdk"
+            android:layout_width="wrap_content"
+            android:layout_height="?android:attr/actionBarSize"
+            android:layout_gravity="center"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:contentDescription="@string/img_content_description"
+            android:focusable="true"
+            android:paddingHorizontal="20dp"
+            android:src="@drawable/ic_back_arrow"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/txtToolbarMain"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/telkomsel_batik_sans_bold"
+            android:text="@string/toolbar_title_tti"
+            android:textColor="@color/blue_dark"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toBottomOf="@id/btnCloseSdk"
+            app:layout_constraintStart_toEndOf="@id/btnCloseSdk"
+            app:layout_constraintTop_toTopOf="@id/btnCloseSdk"/>
+
+        <ImageView
+            android:id="@+id/btnHelp"
+            android:layout_width="wrap_content"
+            android:layout_height="?android:attr/actionBarSize"
+            android:layout_gravity="center"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:contentDescription="@string/img_content_description"
+            android:focusable="true"
+            android:paddingHorizontal="20dp"
+            android:src="@drawable/icon_help"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/loadingBox"
@@ -24,7 +68,9 @@
         android:elevation="10dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tti_toolbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/containerMainToolbar"
         tools:visibility="visible">
 
         <include
@@ -43,6 +89,7 @@
         android:id="@+id/mapContainer"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
+        android:background="#34000000"
         android:orientation="horizontal"
         android:overScrollMode="never"
         android:scrollbarThumbHorizontal="@android:color/transparent"
@@ -50,21 +97,24 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tti_toolbar">
+        app:layout_constraintTop_toBottomOf="@id/containerMainToolbar"
+        tools:visibility="visible">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="#34000000"
             tools:visibility="gone">
 
-            <app.rive.runtime.kotlin.RiveAnimationView
-                android:id="@+id/map"
-                android:layout_width="3580dp"
-                android:layout_height="1976dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+            <!--            <app.rive.runtime.kotlin.RiveAnimationView-->
+            <!--                android:id="@+id/map"-->
+            <!--                android:layout_width="3580dp"-->
+            <!--                android:layout_height="1976dp"-->
+            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--                app:layout_constraintEnd_toEndOf="parent"-->
+            <!--                app:layout_constraintStart_toStartOf="parent"-->
+            <!--                app:layout_constraintTop_toTopOf="parent"-->
+            <!--                tools:visibility="gone"/>-->
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -77,7 +127,7 @@
         android:layout_margin="24dp"
         android:src="@drawable/icon_star"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tti_toolbar"/>
+        app:layout_constraintTop_toBottomOf="@id/containerMainToolbar"/>
 
     <TextView
         android:id="@+id/txtInfo"
@@ -130,7 +180,7 @@
         android:layout_marginEnd="15dp"
         android:background="@drawable/background_icon_map_round"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tti_toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/containerMainToolbar" />
 
     <ImageView
         android:id="@+id/iconMap"
@@ -146,24 +196,27 @@
         app:layout_constraintStart_toStartOf="@+id/bckIconMap"
         app:layout_constraintTop_toTopOf="@+id/bckIconMap" />
 
-
     <LinearLayout
         android:id="@+id/menuTop"
-        android:layout_width="wrap_content"
+        android:layout_width="240dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="2dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="1dp"
         android:background="@drawable/background_menu_top"
         android:orientation="vertical"
-        android:padding="5dp"
+        android:padding="1dp"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tti_toolbar">
+        app:layout_constraintTop_toBottomOf="@+id/containerMainToolbar"
+        tools:visibility="visible">
 
         <LinearLayout
-            android:id="@+id/itemOneMenu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/itemMenuGameHelp"
+            android:layout_width="match_parent"
+            android:layout_height="54dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?android:attr/selectableItemBackground"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -193,10 +246,12 @@
             android:paddingEnd="4dp" />
 
         <LinearLayout
-            android:id="@+id/itemTwoMenu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="25dp"
+            android:id="@+id/itemMenuReplay"
+            android:layout_width="match_parent"
+            android:layout_height="54dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?android:attr/selectableItemBackground"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
