--- a/tti2sdk/src/main/res/layout/activity_home.xml
+++ b/tti2sdk/src/main/res/layout/activity_home.xml
@@ -106,15 +106,15 @@
             android:background="#34000000"
             tools:visibility="gone">
 
-            <!--            <app.rive.runtime.kotlin.RiveAnimationView-->
-            <!--                android:id="@+id/map"-->
-            <!--                android:layout_width="3580dp"-->
-            <!--                android:layout_height="1976dp"-->
-            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
-            <!--                app:layout_constraintEnd_toEndOf="parent"-->
-            <!--                app:layout_constraintStart_toStartOf="parent"-->
-            <!--                app:layout_constraintTop_toTopOf="parent"-->
-            <!--                tools:visibility="gone"/>-->
+            <app.rive.runtime.kotlin.RiveAnimationView
+                android:id="@+id/map"
+                android:layout_width="3580dp"
+                android:layout_height="1976dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:visibility="gone"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -125,6 +125,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_margin="24dp"
+        android:contentDescription="@string/img_content_description"
         android:src="@drawable/icon_star"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/containerMainToolbar"/>
@@ -140,37 +141,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:text="informacoes"/>
-
-    <ImageView
-        android:id="@+id/iconBoard"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/btn_board"
-        android:paddingTop="15dp"
-        android:paddingBottom="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <ImageView
-        android:id="@+id/iconMissions"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/btn_missions"
-        android:paddingTop="15dp"
-        android:paddingBottom="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/iconPrizes"
-        app:layout_constraintStart_toEndOf="@+id/iconBoard" />
-
-    <ImageView
-        android:id="@+id/iconPrizes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bottom_btn_right"
-        android:paddingTop="15dp"
-        android:paddingBottom="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
     <View
         android:id="@+id/bckIconMap"
@@ -191,6 +161,7 @@
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="5dp"
         android:background="@drawable/ico_map"
+        android:contentDescription="@string/img_content_description"
         app:layout_constraintBottom_toBottomOf="@+id/bckIconMap"
         app:layout_constraintEnd_toEndOf="@+id/bckIconMap"
         app:layout_constraintStart_toStartOf="@+id/bckIconMap"
@@ -224,7 +195,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:background="@drawable/icon_help" />
+                android:background="@drawable/icon_help"
+                android:contentDescription="@string/img_content_description" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -259,12 +231,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:background="@drawable/ico_reload" />
+                android:background="@drawable/ico_reload"
+                android:contentDescription="@string/img_content_description" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/twelve_sp"
+                android:layout_marginEnd="@dimen/twelve_sp"
                 android:fontFamily="@font/poppins_regular"
                 android:text="@string/replay_onboarding"
                 android:textAlignment="viewStart"
@@ -273,7 +246,40 @@
 
         </LinearLayout>
 
-
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/iconBoard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/btn_board"
+        android:contentDescription="@string/img_content_description"
+        android:paddingTop="15dp"
+        android:paddingBottom="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/iconMissions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/btn_missions"
+        android:contentDescription="@string/img_content_description"
+        android:paddingTop="15dp"
+        android:paddingBottom="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/iconPrizes"
+        app:layout_constraintStart_toEndOf="@+id/iconBoard" />
+
+    <ImageView
+        android:id="@+id/iconPrizes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bottom_btn_right"
+        android:contentDescription="@string/img_content_description"
+        android:paddingTop="15dp"
+        android:paddingBottom="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
