adjusts call back api, upgrade lib rive for share

--- a/tti2sdk/src/main/res/layout/dialog_share_avatar.xml
+++ b/tti2sdk/src/main/res/layout/dialog_share_avatar.xml
@@ -41,7 +41,7 @@
 
     <ImageView
         android:id="@+id/imageViewShare"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:src="@null"
         app:layout_constraintBottom_toTopOf="@+id/dialogTitle"
